--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,12 @@ Authors@R:
     person("Rongkang", "Xiong", , "earth@mail.ustc.edu.cn", role = c("aut", "cre"),
            comment = c(ORCID = "YOUR-ORCID-ID"))
 Description: a package to test the Rcpp and R packages (one paragraph).
-License: GPL (>= 2)
-Encoding: UTF-8
+License: MIT + file LICENSE
+Imports: Rcpp,boot,bootstrap,microbenchmark
+LinkingTo: Rcpp
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
+Encoding: UTF-8
+lazyData: true
+Suggests: knitr,rmarkdown
+VignetteBuilder: knitr
