--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: StatComp21049
 Title: To calculate the phase space of worm movements
-Version: 0.0.0.9000
+Version: 0.0.1
 Authors@R: 
     person("Rongkang", "Xiong", , "earth@mail.ustc.edu.cn", role = c("aut", "cre"),
            comment = c(ORCID = "YOUR-ORCID-ID"))
@@ -11,11 +11,16 @@ Imports:
     boot,
     bootstrap,
     microbenchmark,
-    stats
+    stats,
+    base,
+    utils
 LinkingTo: Rcpp
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
 Encoding: UTF-8
-lazyData: true
 Suggests: knitr,rmarkdown
 VignetteBuilder: knitr
+Depends: 
+    R (>= 2.10)
+LazyData: true
+LazyDataCompression: xz
