--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,10 @@ Imports:
     microbenchmark,
     stats,
     base,
-    utils
+    utils,
+    FNN,
+    energy,
+    Ball
 LinkingTo: Rcpp
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
